--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "build-url": "^1.0.9",
     "element-ui": "^1.1.2",
     "vue": "^2.1.0",
     "vue-router": "^2.1.1",
